# ad7490_storage

./: .gitignore  Dockerfile  README.md  boot.sh  config.py  docker-compose.yaml  project.env  pyproject.toml  qu.py  reader.py  reset.sh  tcp_server.py  writer.py
ADC/: AD7490_.py  __init__.py  test_.py
GPS/: read-GPS.py
Leonidas/: AD7490_.py
c-writer/: CMakeLists.txt  README.md  ad7490.cpp  ad7490.hpp  config.cpp  config.hpp  main.cpp  qdata.cpp  qdata.hpp  qu.cpp  qu.hpp  reset.cpp  reset.hpp  test_q.cpp  test_q.hpp  uart.cpp  uart.hpp
storage/: qu.py  reader.py  tcp_server.py  writer.py
tasks/: __init__.py  read_trace.py  shell.py  shell_init.txt  tcp_server.py  tcp_writer.py  uart_writer.py  writer.py
