[tool.poetry]
name = "storage"
version = "0.1.0"
description = ""
authors = ["Simple2B <simple2b.info@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.2"
numpy = "^1.26.2"
pydantic-settings = "^2.1.0"
invoke = "^2.2.0"
redis = {extras = ["hiredis"], version = "^5.0.1"}
spidev = "^3.6"


[tool.poetry.group.dev.dependencies]
ipython = "^8.18.1"
ruff = "^0.1.9"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
files = ["api/**/*.py", "app/**/*.py", "test_api/**/*.py", "test_flask/**/*.py"]

[tool.ruff]
exclude = [
    "__pypackages__",
    "__pycache__",
    ".eggs",
    ".git",
    ".github",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
    "node_modules",
    "migrations",
]
line-length = 120
indent-width = 4
